// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedRuleDisplay renders multiple tags 1`] = `
<DocumentFragment>
  <div
    data-testid="selected-rule-display"
    style="margin-top: -1px; margin-bottom: -1px;"
  >
    <span
      class="small tag-container"
      tabindex="0"
    >
      <div
        class="tag-container--content"
      >
        android
      </div>
    </span>
    <span
      class="small tag-container"
      tabindex="0"
    >
      <div
        class="tag-container--content"
      >
        mweb
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`SelectedRuleDisplay renders single tag 1`] = `
<DocumentFragment>
  <div
    data-testid="selected-rule-display"
    style="margin-top: -1px; margin-bottom: -1px;"
  >
    <span
      class="small tag-container"
      tabindex="0"
    >
      <div
        class="tag-container--content"
      >
        android
      </div>
    </span>
  </div>
</DocumentFragment>
`;
